--- a/public/asset/styles2.css
+++ b/public/asset/styles2.css
@@ -15,6 +15,10 @@ body {
     padding-top: 45px;
     padding-bottom: 45px;
 }
+.nav-user {
+    font-family: "poppins", sans-serif;
+    margin-left: 5px;
+}
 
 .layout_padding2-top {
     padding-top: 45px;
