some security and shop,market image crud

--- a/public/asset/style.css
+++ b/public/asset/style.css
@@ -109,3 +109,15 @@ button {
 .card_link:hover {
     color: wheat;
 }
+
+.card_border_market {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+.card_img_market {
+    height: 170px;
+}
+.shop_image_single {
+    max-width: 100%;
+    margin: auto;
+}
