--- a/public/asset/style.css
+++ b/public/asset/style.css
@@ -114,8 +114,9 @@ button {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
         rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
-.card_img_market {
-    height: 170px;
+.card_img_producr {
+    height: 230px;
+    padding: 20px;
 }
 .shop_image_single {
     max-width: 100%;
