--- a/public/asset/styles2.css
+++ b/public/asset/styles2.css
@@ -331,102 +331,26 @@ a:focus {
     margin-bottom: 20px;
 }
 
-.shop_section .box {
+.card {
     background-color: #eeeeee;
-    position: relative;
-    padding: 10px;
-    margin-top: 25px;
+
     overflow: hidden;
 }
 
-.details_head {
-    display: inline-block;
-}
-
-.shop_section .box a {
-    color: #000000;
-}
-
-.shop_section .box .img-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.card-body {
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+    flex-direction: column;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 15px 30px;
-    height: 245px;
+    align-items: flex-start;
+    padding: 20px;
+    min-height: 250px;
 }
-
-.shop_section .box .img-box img {
-    max-width: 100%;
-    max-height: 145px;
+.card-img {
+    margin-top: 10px;
 }
-
-.shop_section .box .detail-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+.btn_product {
+    border-radius: 50px;
 }
-
-.shop_section .box .detail-box h6 span {
-    color: #094770;
-}
-.price {
-    color: #094770;
-}
-.shop_section .box .new {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    background-color: #ffffff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    border-radius: 100%;
-    font-size: 15px;
-}
-
-.shop_section .btn-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    margin-top: 45px;
-}
-
-.shop_section .btn-box a {
-    display: inline-block;
-    padding: 10px 40px;
-    background-color: #093c70;
-    color: #ffffff;
-    border: 1px solid #093c70;
-    border-radius: 5px;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-}
-
-.shop_section .btn-box a:hover {
-    background-color: transparent;
-    color: #093c70;
-}
-
 /* info section */
 .info_section {
     position: relative;
@@ -545,3 +469,145 @@ a:focus {
 
 /* end footer section*/
 /*# sourceMappingURL=style.css.map */
+.btn_details {
+    display: inline-block;
+
+    background-color: #093c70;
+    color: #ffffff;
+    border: 1px solid #093c70;
+    border-radius: 5px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+.btn_details:hover {
+    background-color: transparent;
+    color: #093c70;
+}
+
+.form_search {
+    width: 50%;
+    margin: auto;
+}
+
+.wrapper {
+    margin: 8px 0;
+}
+
+.search-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    align-items: flex-start;
+}
+
+input {
+    min-width: 20px;
+    padding: 8px;
+    margin: 0 4px 0 0;
+    border: 1px solid #666;
+    border-radius: 5px;
+    height: 30px;
+}
+
+.button {
+    padding: 8px 16px;
+    min-height: 48px;
+    min-width: 10px;
+    word-wrap: nowrap;
+    background: #000;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+}
+
+input {
+    order: 0;
+    align-self: auto;
+}
+
+.search {
+    flex: 2 1 auto;
+}
+
+.date-from {
+    flex: 1 1 auto;
+}
+
+.date-to {
+    flex: 1 1 auto;
+}
+
+.button {
+    order: 4;
+    flex: 0 1 auto;
+    align-self: auto;
+}
+
+input {
+    order: 0;
+    flex: 1 1 auto;
+    align-self: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    border: 1px solid #a9a9a9;
+    border-radius: 3px;
+    height: 50px;
+}
+
+.flex-item:nth-child(1) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 2 1 auto;
+    -ms-flex: 2 1 auto;
+    flex: 2 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+}
+
+.flex-item:nth-child(2) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+}
+
+.flex-item:nth-child(3) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+}
+
+.flex-item:nth-child(4) {
+    -webkit-order: 0;
+    -ms-flex-order: 0;
+    order: 0;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+}
+.Search_home {
+    width: 100%;
+    background: #e6f5f9;
+    margin: 0 auto;
+    padding: 16px;
+}
